--- a/src/css/about.css
+++ b/src/css/about.css
@@ -28,7 +28,7 @@
 #leftAbout {
     grid-column: 1;
     grid-row: 1 / span 2;
-    height: 570px;
+    min-height: 570px;
     background-color: #18181C;
     border-radius: 10px;
     border: 1px solid #24242A;
