--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,5 +1,5 @@
 #mainHero {
-    background-color: black;
+    background-color: #0D0D0F;
     width: 100%;
     padding-bottom: 200px;
 }
@@ -141,7 +141,7 @@
 
 @media(max-width:768px) {
     #navbar {
-        position: absolute;
+        position: fixed;
         flex-direction: column;
         height: auto;
         z-index: 10;
