--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -32,7 +32,7 @@
 #projects-wrapper {
     width: 95%;
     min-height: 600px;
-    margin-top: 150px;
+    padding-top: 150px;
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
