--- a/src/css/templates.css
+++ b/src/css/templates.css
@@ -1,7 +1,10 @@
 #mainTemplates {
     width: 100%;
+    display: flex;
+    flex-direction: column;
     min-height: 730px;
     background-color: #1B1B20;
+    align-items: center;
 }
 
 
@@ -20,7 +23,11 @@
 }
 
 
-
+#ctaOfTemplates {
+    background-color: #008000;
+    align-self: flex-start;
+    margin: 30px;
+}
 
 
 
